kyverno/policies/require-requests-limits.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-requests-limits
spec:
  validationFailureAction: Enforce
  background: false
  rules:
    - name: require-resource-requests-and-limits
      match:
        any:
          - resources:
              kinds:
                - Pod
              namespaces:
                - portfolio
      validate:
        message: "Pods in the 'portfolio' namespace must set CPU and memory requests and limits."
        pattern:
          spec:
            containers:
              - resources:
                  requests:
                    memory: "?*"
                    cpu: "?*"
                  limits:
                    memory: "?*"
                    cpu: "?*"
